# gpyt

./: .gitignore  README.md  build.sh  litellm_uuid.txt  pyproject.toml
gptcli/: __init__.py  app.py
gpyt/: __init__.py  __main__.py  app.py  args.py  assistant.py  config.py  conversation.py  debug.py  exception.py  free_assistant.py  id.py  lite_assistant.py  palm_assistant.py  styles.cssx
gpyt/components/: assistant_app.py  assistant_response.py  assistant_responses.py  conversation_option.py  option_checkbox.py  options.py  past_conversations.py  user_input.py  vim_list.py
