[tool.poetry]
name = "gptcli"
version = "0.1.0"
description = "GPT on the command line."
authors = ["Justin Stitt <jstitt007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
openai = "^0.27.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
